--- a/src/assets/styles/themes/index.scss
+++ b/src/assets/styles/themes/index.scss
@@ -1,9 +1,3 @@
-@import './common';
-
-[data-theme="default"] {
-  @import './default';
-}
-
-[data-theme="dark"] {
-  @import './dark';
-}
+@import './theme';
+@import './default';
+@import './dark';
