--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,8 +1,8 @@
-// #root {
-//   display: flex;
-//   flex-direction: column;
-//   min-height: 100vh;
-// }
+#root {
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+  min-height: 100vh;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
