--- a/src/components/general/Button/Button.module.scss
+++ b/src/components/general/Button/Button.module.scss
@@ -5,20 +5,20 @@
 }
 
 .btn {
-  display: inline-block;
-  cursor: pointer;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  user-select: none;
+  align-items: center;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  display: inline-flex;
+  justify-content: center;
+  font-weight: 400;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
   transition: all 0.2s ease-in-out;
-
+  user-select: none;
+  white-space: nowrap;
+  
   &:hover {
     opacity: 0.8;
   }
@@ -36,45 +36,45 @@
 }
 
 .btnSecondary {
-  color: #fff;
   background-color: #6c757d;
   border-color: #6c757d;
+  color: #fff;
 }
 
 .btnSuccess {
-  color: #fff;
   background-color: #28a745;
   border-color: #28a745;
+  color: #fff;
 }
 
 .btnDanger {
-  color: #fff;
   background-color: #dc3545;
   border-color: #dc3545;
+  color: #fff;
 }
 
 .btnWarning {
-  color: #212529;
   background-color: #ffc107;
   border-color: #ffc107;
+  color: #212529;
 }
 
 .btnInfo {
-  color: #fff;
   background-color: #17a2b8;
   border-color: #17a2b8;
+  color: #fff;
 }
 
 .btnLight {
-  color: #212529;
   background-color: #f8f9fa;
   border-color: #f8f9fa;
+  color: #212529;
 }
 
 .btnDark {
-  color: #fff;
   background-color: #343a40;
   border-color: #343a40;
+  color: #fff;
 }
 
 .btnLink {
