--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,7 +1,8 @@
 @import 'reset.scss';
-@import 'themes';
 @import 'constants';
 @import 'mixins';
 @import 'fonts.scss';
 @import 'colors.scss';
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
+@import 'themes';
 @import 'common.scss';
