--- a/src/pages/AdminPage/components/tables/CarsTable/CarsTable.module.scss
+++ b/src/pages/AdminPage/components/tables/CarsTable/CarsTable.module.scss
@@ -20,3 +20,17 @@
   height: 100%;
   width: 100%;
 }
+
+.table {
+  margin-bottom: 15px;
+}
+
+.rowImg {
+  cursor: pointer;
+  max-width: 100%;
+  transition: all .2s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
+  }
+}
