--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -118,17 +118,17 @@ sup {
   top: -0.5em;
 }
 
-a {
+a.link {
   color: var(--link-color);
   text-decoration: underline;
 }
 
-a:hover {
+a.link:hover {
   --link-color-rgb: var(--link-hover-color-rgb);
 }
 
-a:not([href]):not([class]),
-a:not([href]):not([class]):hover {
+a.link:not([href]):not([class]),
+a.link:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
 }
