--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,7 +1,13 @@
 #root {
-  display: grid;
-  grid-template-rows: auto auto 1fr auto;
-  min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -47,6 +53,7 @@ h6 {
 .h1,
 h1 {
   font-size: calc(1.375rem + 1.5vw);
+  margin-bottom: 1.5rem;
 }
 
 @media (min-width: 1200px) {
