--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,9 @@
 @import 'mixins';
 @import 'fonts.scss';
 @import 'colors.scss';
-@import "~react-image-gallery/styles/scss/image-gallery.scss";
+@import '~react-image-gallery/styles/scss/image-gallery.scss';
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+@import 'slick-overrides.scss';
 @import 'themes';
 @import 'common.scss';
