--- a/src/components/general/Button/Button.module.scss
+++ b/src/components/general/Button/Button.module.scss
@@ -6,6 +6,7 @@
 
 .btn {
   align-items: center;
+  background-color: #f0f0f0;
   border: 1px solid transparent;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -18,7 +19,7 @@
   transition: all 0.2s ease-in-out;
   user-select: none;
   white-space: nowrap;
-  
+
   &:hover {
     opacity: 0.8;
   }
@@ -26,6 +27,13 @@
   &:disabled {
     cursor: not-allowed;
     opacity: 0.5;
+  }
+}
+
+.btnBase {
+  background-color: #f0f0f0;
+  &:hover {
+    background-color: #ccc;
   }
 }
 
@@ -83,7 +91,7 @@
   color: #007bff;
   padding: 0;
   text-decoration: none;
-  
+
   &:hover {
     color: #0056b3;
     opacity: 1;
